--- a/templates/product/edit.html.twig
+++ b/templates/product/edit.html.twig
@@ -3,12 +3,7 @@
 {% block title %}Edit Product{% endblock %}
 
 {% block body %}
-    <h1>Edit Product</h1>
-
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button type="submit">Save</button>
-    {{ form_end(form) }}
-
-    <a href="{{ path('product_index') }}">back to list</a>
+    <div class="container mt-5">
+        <h1 class="mb-4">Edit Product</h1>
+    </div>
 {% endblock %}
