--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -3,35 +3,45 @@
 {% block title %}Product{% endblock %}
 
 {% block body %}
-    <h1>Product</h1>
+    <div class="container mt-5">
+        <h1 class="mb-4">Product Details</h1>
 
-    <table>
-        <tbody>
-        <tr>
-            <th>Name</th>
-            <td>{{ product.name }}</td>
-        </tr>
-        <tr>
-            <th>Price</th>
-            <td>{{ product.price }}</td>
-        </tr>
-        <tr>
-            <th>Photo</th>
-            <td><img src="{{ asset('uploads/photos/' ~ product.photo) }}" alt="{{ product.name }}" width="100"></td>
-        </tr>
-        <tr>
-            <th>Description</th>
-            <td>{{ product.description }}</td>
-        </tr>
-        </tbody>
-    </table>
+        <div class="card">
+            <div class="card-body">
+                <table class="table">
+                    <tbody>
+                    <tr>
+                        <th scope="row">Name</th>
+                        <td>{{ product.name }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Price</th>
+                        <td>{{ product.price }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Photo</th>
+                        <td>
+                            <img src="{{ asset('uploads/photos/' ~ product.photo) }}" alt="{{ product.name }}" class="img-fluid" style="max-width: 100px;">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Description</th>
+                        <td>{{ product.description }}</td>
+                    </tr>
+                    </tbody>
+                </table>
 
-    <a href="{{ path('product_edit', {'id': product.id}) }}">edit</a>
+                <div class="mt-4">
+                    <a href="{{ path('product_edit', {'id': product.id}) }}" class="btn btn-primary">Edit</a>
 
-    <form action="{{ path('product_delete', {'id': product.id}) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this item?');">
-        <input type="hidden" name="_method" value="DELETE">
-        <button type="submit">delete</button>
-    </form>
+                    <form action="{{ path('product_delete', {'id': product.id}) }}" method="post" class="d-inline" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                        <input type="hidden" name="_method" value="DELETE">
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
 
-    <a href="{{ path('product_index') }}">back to list</a>
+                    <a href="{{ path('product_index') }}" class="btn btn-secondary">Back to list</a>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
